--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <button id="close-nav" aria-label="Close navigation">&times;</button>
         <ul>
             <li><a href="#home" class="nav-link" data-route="home">Home</a></li>
+            <li><a href="#recipes" class="nav-link">Recipes</a></li>
             <li><button id="new-trip-btn" class="nav-link" style="background:none; border:none; cursor:pointer;">+ New
                     Trip</button></li>
         </ul>
