--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
 
     <!-- Navigation Overlay -->
-    <nav id="main-nav" class="hidden">
+    <nav id="main-nav">
         <button id="close-nav" aria-label="Close navigation">&times;</button>
         <ul>
             <li><a href="#home" class="nav-link" data-route="home">Home</a></li>
