--- a/index.html
+++ b/index.html
@@ -88,11 +88,12 @@
       {
         "imports": {
           "firebase/app": "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js",
-          "firebase/auth": "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js"
+          "firebase/auth": "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js",
+          "firebase/firestore": "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js"
         }
       }
     </script>
-    <script src="script.js?v=10" type="module"></script>
+    <script src="script.js?v=11" type="module"></script>
 </body>
 
 </html>
