--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <input type="text" id="edit-title" required>
                 </div>
 
-                <div class="form-group">
+                <div class="form-group" id="form-group-country">
                     <label>Country (for Recipes)</label>
                     <input type="text" id="edit-country" placeholder="e.g. Indonesia">
                 </div>
@@ -54,7 +54,7 @@
                     <input type="text" id="edit-date" required>
                 </div>
 
-                <div class="form-group">
+                <div class="form-group" id="form-group-location">
                     <label>Location</label>
                     <input type="text" id="edit-location" required>
                 </div>
@@ -77,7 +77,7 @@
                     </div>
                 </div>
 
-                <button type="submit" class="save-btn">Save Trip</button>
+                <button type="submit" id="save-trip-btn" class="save-btn">Save Trip</button>
                 <button type="button" id="delete-trip-btn" class="delete-btn hidden">Delete Trip</button>
             </form>
         </div>
@@ -93,7 +93,7 @@
         }
       }
     </script>
-    <script src="script.js?v=16" type="module"></script>
+    <script src="script.js?v=17" type="module"></script>
 </body>
 
 </html>
