--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
                 </div>
 
                 <div class="form-group" id="form-group-country">
-                    <label>Country (for Recipes)</label>
+                    <label>Country</label>
                     <input type="text" id="edit-country" placeholder="e.g. Indonesia">
                 </div>
 
-                <div class="form-group">
+                <div class="form-group" id="form-group-date">
                     <label>Date</label>
                     <input type="text" id="edit-date" required>
                 </div>
@@ -93,7 +93,7 @@
         }
       }
     </script>
-    <script src="script.js?v=17" type="module"></script>
+    <script src="script.js?v=18" type="module"></script>
 </body>
 
 </html>
