--- a/index.html
+++ b/index.html
@@ -95,6 +95,15 @@
         }
       }
     </script>
+
+    <!-- Lightbox Overlay -->
+    <div id="lightbox">
+        <button class="lightbox-close">&times;</button>
+        <button class="lightbox-nav lightbox-prev">&lsaquo;</button>
+        <img id="lightbox-img" src="" alt="Fullscreen">
+        <button class="lightbox-nav lightbox-next">&rsaquo;</button>
+    </div>
+
     <script src="script.js?v=19" type="module"></script>
 </body>
 
